Add authorizatin docs
